--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,11 @@
             <artifactId>log4j-core</artifactId>
             <version>2.3</version>
         </dependency>
+        <dependency>
+            <groupId>org.sql2o</groupId>
+            <artifactId>sql2o</artifactId>
+            <version>1.5.4</version>
+        </dependency>
     </dependencies>
 
     <properties>
@@ -150,7 +155,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>dk.trustworks.clientmanager.ClientApplication</mainClass>
+                            <mainClass>dk.trustworks.timemanager.TimeApplication</mainClass>
                         </manifest>
                     </archive>
                     <descriptorRefs>
