--- a/profiles/dev/config.properties
+++ b/profiles/dev/config.properties
@@ -1,4 +1,4 @@
-database.uri=jdbc:mysql://localhost:3306/usermanager
+database.uri=jdbc:mysql://localhost:3306/timemanager
 database.username=root
 database.password=
 zookeeper.host=localhost
