--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,11 @@
             <artifactId>hazelcast</artifactId>
             <version>3.5.2</version>
         </dependency>
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>2.9.1</version>
+        </dependency>
     </dependencies>
 
     <properties>
